--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300&display=swap" rel="stylesheet">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
 
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
       font-size: 11px;
@@ -29,38 +26,46 @@
 </head>
 
 <body>
-  <div class="targeta">
-    <div class="A">
-      <figure>
-        <img class="img-nft" src="image-equilibrium.jpg">
-        <div class="capa">
-          <img src="icon-view.svg">
+  <div class="nft">
+    <div class="targeta">
+      <div class="A">
+        <figure>
+          <img class="img-nft" src="image-equilibrium.jpg">
+          <div class="capa">
+            <img src="icon-view.svg">
+          </div>
+        </figure>
+
+        <div class="img-nft">
+
         </div>
-      </figure>
-
-      <div class="img-nft">
-
       </div>
-    </div>
-    <div class="nombre-nft">
-      <a> Equilibrium #3429</a>
-    </div>
-    <div class="descripcion-nft">
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-    </div>
-    <div class="pd">
-      <a class="precio-nft"><img src="icon-ethereum.svg"> 0.041 ETH</a>
-      <a class="dias"><img src="icon-clock.svg">3 days left</a>
-    </div>
-    <div>
-      <a class="creadora"><img src="image-avatar.png"> Creation of <span> _Jules Wyvern</span></a>
+      <div class="nombre-nft">
+        <a> Equilibrium #3429</a>
+      </div>
+      <div class="descripcion-nft">
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div>
+      <div class="pd">
+        <a class="precio-nft"><img src="icon-ethereum.svg"> 0.041 ETH</a>
+        <a class="dias"><img src="icon-clock.svg">3 days left</a>
+      </div>
+      <div>
+        <a class="creadora"><img src="image-avatar.png"> Creation of <span> _Jules Wyvern</span></a>
+      </div>
+
+
     </div>
 
-    <!--
   </div>
   <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.</div>-->
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Viktor Ch</a>.</div>
+
+
+
 </body>
+
+
 
 </html>
