--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 <body>
   <div class="nft">
-    <div class="targeta">
+    <div class="card">
       <div class="A">
         <figure>
-          <img class="img-nft" src="image-equilibrium.jpg">
-          <div class="capa">
-            <img src="icon-view.svg">
+          <img class="img-nft" src="image-equilibrium.jpg" alt="image of a nft">
+          <div class="cap">
+            <img src="icon-view.svg" alt="icon to watch ">
           </div>
         </figure>
 
@@ -40,18 +40,18 @@
 
         </div>
       </div>
-      <div class="nombre-nft">
+      <div class="name-nft">
         <a> Equilibrium #3429</a>
       </div>
       <div class="descripcion-nft">
         <p>Our Equilibrium collection promotes balance and calm.</p>
       </div>
       <div class="pd">
-        <a class="precio-nft"><img src="icon-ethereum.svg"> 0.041 ETH</a>
-        <a class="dias"><img src="icon-clock.svg">3 days left</a>
+        <a class="price-nft"><img src="icon-ethereum.svg" alt="icon ethereum"> 0.041 ETH</a>
+        <a class="days"><img src="icon-clock.svg" alt="icon clock">3 days left</a>
       </div>
       <div>
-        <a class="creadora"><img src="image-avatar.png"> Creation of <span> _Jules Wyvern</span></a>
+        <a class="creator"><img src="image-avatar.png" alt="creator photo "> Creation of <span> _Jules Wyvern</span></a>
       </div>
 
 
